--- a/index.html
+++ b/index.html
@@ -28,18 +28,31 @@
       <button id="startBtn">התחל/י טיימר</button>
       <button id="resetBtn" title="לא חובה — מאפס את המונה והטיימר">איפוס</button>
     </div>
-
-    <div class="stat">
+<div class="stat">
       <div><strong>מספר לחיצות:</strong> <span id="pressCount">0</span></div>
       <div><strong>משך הטיימר הבא:</strong> <span id="nextLength">30 דקות</span></div>
     </div>
 
     <div class="stat">
-      <div><strong>ממוצע זמן בין לחיצות (לפי ההגדרה שלך):</strong></div>
+      <div><strong>הממוצע לפי ההגדרה הקודמת שלך:</strong></div>
       <div id="avgText" class="muted">—</div>
-      <div class="muted" style="margin-top:6px;">(זמן שעבר מאז הלחיצה הראשונה ÷ מספר הלחיצות)</div>
+      <div class="muted" style="margin-top:6px;">(זמן מאז הלחיצה הראשונה ÷ מספר הלחיצות)</div>
     </div>
-  </div>
+    <div class="stat">
+      <div><strong>ממוצעים:</strong></div>
+      <div>ממוצע 24/7: <span id="avgAll">—</span></div>
+      <div>ממוצע בזמן ערות (ללא שינה): <span id="avgAwake">—</span></div>
+      <div class="muted" style="margin-top:6px;">(ממוצעים מחושבים על בסיס המרווחים בין לחיצות)</div>
+    </div>
+
+    <div class="stat">
+      <div><strong>העדפות שינה</strong></div>
+      <div class="row" style="margin-top:8px;">
+        <label>נרדמתי: <input type="time" id="sleepStart" value="23:30"></label>
+        <label>התעוררתי: <input type="time" id="sleepEnd" value="07:30"></label>
+      </div>
+      <div class="muted" style="margin-top:6px;">השעות יכולות לחצות חצות (למשל 23:30 → 07:30)</div>
+    </div>
 
 <script>
 (() => {
@@ -50,17 +63,24 @@
   const resetBtn = document.getElementById('resetBtn');
   const pressCountEl = document.getElementById('pressCount');
   const nextLengthEl = document.getElementById('nextLength');
-  const avgTextEl = document.getElementById('avgText');
+  const avgTextEl = document.getElementById('avgText');   // "ההגדרה שלך"
+  const avgAllEl = document.getElementById('avgAll');     // ממוצע 24/7
+  const avgAwakeEl = document.getElementById('avgAwake'); // ממוצע ערות
+  const sleepStartInput = document.getElementById('sleepStart');
+  const sleepEndInput = document.getElementById('sleepEnd');
 
   // ===== Config & Storage =====
   const BASE_MINUTES = 30;
   const INCREMENT = 5;
-  const LS_KEY = 'myTimerState.v1';
+  const LS_KEY = 'myTimerState.v2'; // bump לגרסה חדשה כדי לא לשבור אחורה
 
   const defaultState = () => ({
     pressCount: 0,
     firstPressTs: null,
-    targetTs: null, // מתי מסתיים הטיימר הפעיל (אם יש)
+    targetTs: null,          // מתי מסתיים הטיימר הפעיל (אם יש)
+    pressTimestamps: [],     // חותמות זמן לכל לחיצה (ms)
+    sleepStartHHMM: "23:30", // ברירת מחדל
+    sleepEndHHMM: "07:30"
   });
 
   const loadState = () => {
@@ -80,6 +100,11 @@
 
   // ===== State =====
   let state = loadState();
+  // backfill לשדות חדשים אם חסרים
+  state.pressTimestamps = Array.isArray(state.pressTimestamps) ? state.pressTimestamps : [];
+  if (!state.sleepStartHHMM) state.sleepStartHHMM = "23:30";
+  if (!state.sleepEndHHMM) state.sleepEndHHMM = "07:30";
+
   let running = false;
   let tickInterval = null;
   let avgInterval = null;
@@ -105,6 +130,89 @@
     return parts.join(' ו');
   };
 
+  function formatMinutes(mins) {
+    if (!isFinite(mins) || mins <= 0) return "—";
+    const h = Math.floor(mins / 60);
+    const m = Math.round(mins % 60);
+    return h > 0 ? `${h} ש׳ ${String(m).padStart(2,"0")} דק׳` : `${m} דק׳`;
+  }
+
+  function parseHHMM(s) {
+    const [h, m] = s.split(":").map(Number);
+    return h * 60 + m;
+  }
+
+  function overlapWithDailySleep(startMs, endMs, sleepStartMin, sleepEndMin) {
+    if (endMs <= startMs) return 0;
+    const MS_IN_MIN = 60 * 1000;
+    const MS_IN_DAY = 24 * 60 * MS_IN_MIN;
+
+    const dayStart = (t) => t - (t % MS_IN_DAY);
+    let curDayStart = dayStart(startMs);
+    let totalOverlapMin = 0;
+
+    while (curDayStart < endMs) {
+      const nextDayStart = curDayStart + MS_IN_DAY;
+      const clampStart = Math.max(startMs, curDayStart);
+      const clampEnd = Math.min(endMs, nextDayStart);
+
+      const crossesMidnight = sleepEndMin <= sleepStartMin;
+      const sleep1Start = curDayStart + sleepStartMin * MS_IN_MIN;
+
+      if (crossesMidnight) {
+        // חלק ראשון: מהשכיבה עד חצות
+        const sleep1End = nextDayStart; // חצות
+        totalOverlapMin += overlapMs(clampStart, clampEnd, sleep1Start, sleep1End) / MS_IN_MIN;
+
+        // חלק שני: מחצות עד שעת קימה
+        const sleep2Start = nextDayStart;
+        const sleep2End = nextDayStart + sleepEndMin * MS_IN_MIN;
+        totalOverlapMin += overlapMs(clampStart, clampEnd, sleep2Start, sleep2End) / MS_IN_MIN;
+      } else {
+        // חלון שינה רגיל באותו היום
+        const sleepEndAbs = curDayStart + sleepEndMin * MS_IN_MIN;
+        totalOverlapMin += overlapMs(clampStart, clampEnd, sleep1Start, sleepEndAbs) / MS_IN_MIN;
+      }
+
+      curDayStart = nextDayStart;
+    }
+    return Math.max(0, totalOverlapMin);
+
+    function overlapMs(aStart, aEnd, bStart, bEnd) {
+      const s = Math.max(aStart, bStart);
+      const e = Math.min(aEnd, bEnd);
+      return Math.max(0, e - s);
+    }
+  }
+
+  function averageIntervalsAll(ts) {
+    if (!ts || ts.length < 2) return 0;
+    let totalMin = 0;
+    for (let i = 1; i < ts.length; i++) {
+      totalMin += (ts[i] - ts[i - 1]) / 60000;
+    }
+    return totalMin / (ts.length - 1);
+  }
+
+  function averageIntervalsAwake(ts, sleepStartHHMM, sleepEndHHMM) {
+    if (!ts || ts.length < 2) return 0;
+    const sStart = parseHHMM(sleepStartHHMM);
+    const sEnd = parseHHMM(sleepEndHHMM);
+
+    let totalActiveMin = 0;
+    let count = 0;
+    for (let i = 1; i < ts.length; i++) {
+      const a = ts[i - 1], b = ts[i];
+      if (b <= a) continue;
+      const intervalMin = (b - a) / 60000;
+      const sleepOverlapMin = overlapWithDailySleep(a, b, sStart, sEnd);
+      const activeMin = Math.max(0, intervalMin - sleepOverlapMin);
+      totalActiveMin += activeMin;
+      count++;
+    }
+    return count ? totalActiveMin / count : 0;
+  }
+
   const nextTimerMinutes = () =>
     BASE_MINUTES + INCREMENT * Math.max(0, state.pressCount);
 
@@ -113,14 +221,30 @@
     nextLengthEl.textContent = `${nextTimerMinutes()} דקות`;
   };
 
-  const updateAvgLive = () => {
-    if (!state.firstPressTs || state.pressCount === 0) {
-      avgTextEl.textContent = '—';
-      return;
+  const updateAverages = () => {
+    // אם יש לפחות שתי לחיצות, יש מרווחים
+    if (!state.pressTimestamps || state.pressTimestamps.length < 2) {
+      avgAllEl && (avgAllEl.textContent = '—');
+      avgAwakeEl && (avgAwakeEl.textContent = '—');
+    } else {
+      const avgAllMin = averageIntervalsAll(state.pressTimestamps);
+      const avgAwakeMin = averageIntervalsAwake(
+        state.pressTimestamps,
+        state.sleepStartHHMM,
+        state.sleepEndHHMM
+      );
+      avgAllEl && (avgAllEl.textContent = formatMinutes(avgAllMin));
+      avgAwakeEl && (avgAwakeEl.textContent = formatMinutes(avgAwakeMin));
     }
-    const elapsed = Date.now() - state.firstPressTs;
-    const avgMs = elapsed / state.pressCount;
-    avgTextEl.textContent = formatWords(avgMs);
+
+    // "ההגדרה שלך": זמן מאז הלחיצה הראשונה ÷ מספר הלחיצות
+    if (state.firstPressTs && state.pressCount > 0) {
+      const elapsed = Date.now() - state.firstPressTs;
+      const avgMs = elapsed / state.pressCount;
+      avgTextEl.textContent = formatWords(avgMs);
+    } else {
+      avgTextEl.textContent = '—';
+    }
   };
 
   const stopTimer = (finished = false) => {
@@ -143,11 +267,15 @@
   const startTimer = () => {
     if (running) return;
 
+    // רישום לחיצה (סיגריה)
+    const nowTs = Date.now();
+    state.pressTimestamps.push(nowTs);
+
     state.pressCount += 1;
-    if (!state.firstPressTs) state.firstPressTs = Date.now();
+    if (!state.firstPressTs) state.firstPressTs = nowTs;
 
     const minutes = nextTimerMinutes();
-    state.targetTs = Date.now() + minutes * 60 * 1000;
+    state.targetTs = nowTs + minutes * 60 * 1000;
     saveState();
 
     running = true;
@@ -161,30 +289,45 @@
       const left = state.targetTs - Date.now();
       if (left <= 0) {
         stopTimer(true);
+        updateAverages(); // עדכון מייד כשנגמר
       } else {
         timerEl.textContent = mmss(left);
       }
     }, 200);
 
-    avgInterval = setInterval(updateAvgLive, 1000);
-    updateAvgLive();
+    avgInterval = setInterval(updateAverages, 1000);
+    updateAverages();
   };
 
   const resetAll = () => {
+    // נשמור העדפות שינה כדי שלא יימחקו
+    const keepSleepStart = state.sleepStartHHMM;
+    const keepSleepEnd = state.sleepEndHHMM;
+
     state = defaultState();
+    state.sleepStartHHMM = keepSleepStart;
+    state.sleepEndHHMM = keepSleepEnd;
+
     saveState();
     running = false;
     clearInterval(tickInterval);
     clearInterval(avgInterval);
     tickInterval = null;
     avgInterval = null;
+
     timerEl.textContent = mmss(BASE_MINUTES * 60 * 1000);
-    statusEl.textContent =
-      'מוכן להתחיל — הלחיצה הראשונה תפתח 30 דקות';
+    statusEl.textContent = 'מוכן להתחיל — הלחיצה הראשונה תפתח 30 דקות';
     statusEl.classList.add('muted');
     startBtn.disabled = false;
     updateUI();
+
     avgTextEl.textContent = '—';
+    if (avgAllEl) avgAllEl.textContent = '—';
+    if (avgAwakeEl) avgAwakeEl.textContent = '—';
+
+    // לעדכן את שדות השינה במסך
+    if (sleepStartInput) sleepStartInput.value = state.sleepStartHHMM;
+    if (sleepEndInput) sleepEndInput.value = state.sleepEndHHMM;
   };
 
   // ===== Events =====
@@ -203,7 +346,27 @@
     lastResetClick = now;
   });
 
+  // האזנה לשינוי שעות השינה
+  if (sleepStartInput) {
+    sleepStartInput.addEventListener('change', () => {
+      state.sleepStartHHMM = sleepStartInput.value || "23:30";
+      saveState();
+      updateAverages();
+    });
+  }
+  if (sleepEndInput) {
+    sleepEndInput.addEventListener('change', () => {
+      state.sleepEndHHMM = sleepEndInput.value || "07:30";
+      saveState();
+      updateAverages();
+    });
+  }
+
   // ===== Init =====
+  // לאתחל שדות שינה מה-state
+  if (sleepStartInput) sleepStartInput.value = state.sleepStartHHMM;
+  if (sleepEndInput) sleepEndInput.value = state.sleepEndHHMM;
+
   if (state.targetTs && state.targetTs > Date.now()) {
     running = true;
     startBtn.disabled = true;
@@ -214,23 +377,23 @@
       const left = state.targetTs - Date.now();
       if (left <= 0) {
         stopTimer(true);
+        updateAverages();
       } else {
         timerEl.textContent = mmss(left);
       }
     }, 200);
-    avgInterval = setInterval(updateAvgLive, 1000);
-    updateAvgLive();
+    avgInterval = setInterval(updateAverages, 1000);
+    updateAverages();
   } else {
     if (state.targetTs) {
       stopTimer(true);
     } else {
       timerEl.textContent = mmss(BASE_MINUTES * 60 * 1000);
-      statusEl.textContent =
-        'מוכן להתחיל — הלחיצה הראשונה תפתח 30 דקות';
+      statusEl.textContent = 'מוכן להתחיל — הלחיצה הראשונה תפתח 30 דקות';
       statusEl.classList.add('muted');
       startBtn.disabled = false;
       updateUI();
-      updateAvgLive();
+      updateAverages();
     }
   }
 })();
